bin = [
  { name = "aoc24_01", path = "exercises/aoc24_01.rs" }
]

[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"

[lints.clippy]
todo = "forbid"
empty_loop = "forbid"
infinite_loop = "deny"
mem_forget = "deny"